--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 clap = { version = "4.5.40", features = ["derive"] }
 crc = "3.3.0"
+reqwest = { version = "0.12.22", features = ["blocking"] }
 
